--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,388 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  li {
+    list-style-type: none;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  button {
+    cursor: pointer;
+  }
+  
+  .no-cursor {
+    cursor: no-drop;
+  }
+  
+  .red {
+    color: red;
+  }
+  
+  .btn__menu {
+    background-color: transparent;
+    border: none;
+    font-size: 32px;
+    text-align: center;
+    color: red;
+    display: none;
+  }
+  
+  .menu__backdrop {
+    position: absolute;
+    background-color: red;
+    top: 3%;
+    left: 2%;
+    bottom: 40%;
+    right: 2%;
+    border: 1px solid #a0aec08c;
+    border-radius: 10px;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+  .menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+    animation: slide-in 400ms 100ms backwards;
+  }
+  
+  @keyframes slide-in {
+    0% {
+      transform: translateX(110%);
+    }
+  
+    33% {
+      transform: translateX(-10%);
+    }
+  
+    67% {
+      transform: translateX(10%);
+    }
+  
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  .menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
+  }
+  
+  .menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .menu__list {
+    padding: 8px 0;
+  }
+  
+  .menu__link {
+    font-size: 18px;
+    color: #1a202c;
+    font-weight: 600;
+  }
+  
+  .menu__link:hover {
+    color: white;
+    cursor: pointer;
+  }
+  
+  .btn__menu--close {
+    position: absolute;
+    right: 10px;
+    top: -2px;
+    padding: 8px;
+    color: black;
+  }
+  
+  .btn__menu--close:hover,
+  .btn__menu:hover {
+    color: white;
+  }
+  
+  /* 
+  
+  LANDING 
+  
+  */
+  
+  nav {
+    height: 80px;
+    background-color: #242424;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 24px;
+  }
+  
+  .logo__wrapper {
+    display: flex;
+    align-items: center;
+  }
+  
+  .fa-film {
+    color: red;
+    font-size: 24px;
+  }
+  
+  .logo__text {
+    color: red;
+    margin-left: 12px;
+  }
+  
+  .nav__link--list {
+    display: flex;
+  }
+  
+  .nav__link {
+    padding-left: 18px;
+  }
+  
+  .nav__link--anchor {
+    color: red;
+  }
+  
+  .nav__link--anchor-primary {
+    padding: 4px 12px;
+    color: white;
+    background-color: red;
+    border-radius: 12px;
+  }
+  
+  header {
+    margin: 0 auto;
+    padding: 0 24px;
+    height: calc(100vh - 80px);
+  }
+  
+  .header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 32px 0 16px 0;
+  }
+  
+  .header__title {
+    font-size: 48px;
+  }
+  
+  .header__subtitle {
+    margin: 24px 0 12px 0;
+    width: 100%;
+    max-width: 500px;
+    font-size: 32px;
+  }
+  
+  .header__subtitle--anchor {
+    transition: all 300ms ease;
+  }
+  
+  .header__subtitle--anchor:hover {
+    filter: brightness(1.1);
+    transform: scale(1.1);
+  }
+  
+  form {
+    display: flex;
+    align-items: center;
+  }
+  
+  input {
+    position: relative;
+    width: 100%;
+    max-width: 380px;
+    padding: 10px 56px 10px 12px;
+    border-radius: 9999px;
+    border: 1px solid black;
+  }
+  
+  input::placeholder {
+    margin-right: -24px;
+  }
+  
+  input:focus {
+    outline: none;
+  }
+  
+  .header__btn--wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+  }
+  
+  .header__btn {
+    position: absolute;
+    margin-right: 12px;
+    border: none;
+    background-color: transparent;
+  }
+  
+  .fa-magnifying-glass:hover {
+    color: red;
+  }
+  
+  .header__img--wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .header__img {
+    max-width: 500px;
+  }
+  
+  /***
+  
+  MOVIE.HTML
+  
+  ***/
+  
+  .nav__movie--secondary {
+    padding: 24px 0;
+    width: 100%;
+    background-color: #242424;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .nav__title {
+    color: red;
+    margin-bottom: 12px;
+  }
+  
+  .header {
+    padding: 24px;
+    position: relative;
+  }
+  
+  .header__movie {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 12px;
+  }
+  
+  .filter__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #filter {
+    margin-left: 6px;
+  }
+  
+  .movie-list {
+    display: flex;
+    flex-wrap: wrap;
+    visibility: visible;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .movie-list--hidden {
+    visibility: hidden;
+  }
+  
+  .movie {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 24px;
+    transition: all 300ms ease;
+  }
+  
+  .movie__img--wrapper {
+    width: 100%;
+  }
+  
+  .movie__img {
+    width: 100%;
+    height: stretch;
+    cursor: no-drop;
+  }
+  
+  .movie:hover {
+    transform: scale(1.1);
+    filter: brightness(0.7);
+  }
+  
+  .movie__title {
+    text-align: center;
+  }
+  
+  .movie__loading {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
+  
+  .fa-spinner {
+    animation: rotate 600ms infinite linear;
+    color: red;
+    font-size: 120px;
+    visibility: hidden;
+  }
+  
+  .spinner--visible {
+    visibility: visible;
+  }
+  
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .movie {
+      width: 50%;
+    }
+  }
+  
+  @media (max-width: 600px) {
+    .btn__menu {
+      display: block;
+    }
+  
+    .nav__link {
+      display: none;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .header__img {
+      max-width: 300px;
+    }
+  
+    .movie {
+      width: 100%;
+    }
+  }
+  
