--- a/src/index.css
+++ b/src/index.css
@@ -408,15 +408,19 @@ footer {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 0 96px;
 }
 
 .movie__poster--skeleton {
   background-color: #e5e5e5;
-  height: 400px;
-  width: 275px;
+  height: 440px;
+  width: 100%;
+  max-width: 300px;
   border-radius: 10px;
   box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+}
+
+.movie__poster--skeleton {
+  margin: 12px;
 }
 
 .movie__info-skeleton--wrapper {
@@ -430,29 +434,21 @@ footer {
   border-radius: 10px;
   background-color: #e5e5e5;
   height: 45px;
-  width: 350px;
+  width: 100%;
+  max-width: 150px;
   margin-bottom: 32px;
   box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
 }
 
-.movie__info-title--skeleton,
-.movie__poster--skeleton {
-  background: linear-gradient(
-    120deg,
-    #e5e5e5 30%,
-    #f0f0f0 38%,
-    #f0f0f0 40%,
-    #e5e5e5 48%
-  );
-  background-size: 200% 100%;
-  background-position: 100% 0;
-  animation: load 2s inifnite;
+.movie__info-title--skeleton-long {
+  width: 100%;
+  max-width: 200px;
 }
 
-@keyframes load {
-  100% {
-    background-position: -100% 0;
-  }
+.movie__info-title--skeleton-large {
+  width: 100%;
+  height: 90px;
+  max-width: 450px;
 }
 
 /* 
@@ -464,7 +460,6 @@ footer {
 .movies__container {
   padding: 24px 0;
   background-color: red;
-  height: calc(100vh - 96px);
 }
 
 .movie__clicked--links {
@@ -517,7 +512,29 @@ footer {
     width: 50%;
   }
 
-  
+  .movie__clicked {
+    margin-top: 12px;
+  }
+
+  .movie__clicked--description {
+    margin-bottom: 16px;
+  }
+
+  .movie__clicked--info {
+    text-align: center;
+  }
+
+  .movie__clicked,
+  .skeleton__info--wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .movie__info-skeleton--wrapper {
+    margin-top: 12px;
+    align-items: center;
+  }
 }
 
 @media (max-width: 600px) {
@@ -537,5 +554,9 @@ footer {
 
   .movie {
     width: 100%;
+  }
+
+  .movie__info-title--skeleton-large {
+    width: 250px;
   }
 }
